# markitdown-plus

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
.hermes/: TODO.md
docs/: comparison-with-markitdown.md  rag-output.md  usage.md
examples/sample_docs/: hello.txt
src/markitdown_plus/: __about__.py  __init__.py  assets.py  batch.py  chunker.py  cleaner.py  cli.py  converter.py  errors.py  manifest.py  metadata.py  utils.py
tests/: test_assets.py  test_batch.py  test_benchmark_optional.py  test_chunker.py  test_cleaner.py  test_cli.py  test_converter.py  test_manifest.py  test_metadata.py  test_property_optional.py  test_utils.py
