[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "markitdown-plus"
version = "0.2.0"
description = "Batch conversion, asset extraction, and RAG-ready output toolkit for Microsoft MarkItDown."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Lam Guo", email = "lamguo111@gmail.com" }
]
keywords = [
  "markitdown",
  "microsoft-markitdown",
  "markdown",
  "rag",
  "llm",
  "pdf-to-markdown",
  "document-conversion",
  "batch-conversion",
  "jsonl",
  "asset-extraction",
  "docx-to-markdown"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "markitdown[all]>=0.1.0"
]

[project.optional-dependencies]
progress = [
  "tqdm>=4.66"
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]
quality = [
  "hypothesis>=6.100",
  "pytest-benchmark>=4.0"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "pytest-benchmark>=4.0",
  "ruff>=0.6.0",
  "tqdm>=4.66"
]

[project.urls]
Homepage = "https://github.com/lamguo/markitdown-plus"
Repository = "https://github.com/lamguo/markitdown-plus"
Issues = "https://github.com/lamguo/markitdown-plus/issues"
Funding = "https://www.paypal.me/lamguo"

[project.scripts]
markitdown-plus = "markitdown_plus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown_plus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=markitdown_plus --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
